--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,13 @@
 
         <!-- Admin Screen -->
         <activity android:name=".AdminDashboard" />
-        <activity android:name=".AdminProfile" />
-        <activity android:name="admin.AdminProfileActivity" />
-        <activity android:name="admin.EditUserActivity" />
+        <activity android:name="admin.AdminProfileActivity"/>
+        <activity android:name=".UserListAdminActivity"/>
+        <activity android:name=".UserProfileActivity"/>
 
 
         <!-- User Screen -->
         <activity android:name=".UserDashboard" />
-        <activity android:name=".UserProfile" />
-        <activity android:name=".UserProfileActivity" />
 
         <!-- Login Screen (Main) -->
         <activity
